// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageDetails renders 1`] = `
<Screen
  navBarColor="#fff"
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Options",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/kabob.png",
        },
        "testID": "pages.details.editButton",
      },
    ]
  }
  showDismissButton={true}
  statusBarStyle="default"
  subtitle="Course 1"
  title="Page Details"
>
  <View
    style={
      Object {
        "flex": 1,
        "padding": 16,
      }
    }
  >
    <Heading1
      style={
        Object {
          "paddingBottom": 17,
        }
      }
    >
      Page 1
    </Heading1>
    <CanvasWebView
      html="<p>Hello, World!</p>"
      navigator={
        Object {
          "dismiss": [Function],
          "dismissAllModals": [Function],
          "isModal": false,
          "pop": [Function],
          "show": [Function],
          "traitCollection": [Function],
        }
      }
      scrollEnabled={true}
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
</Screen>
`;

exports[`PageDetails renders while loading 1`] = `
<Screen
  navBarColor="#fff"
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Options",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/kabob.png",
        },
        "testID": "pages.details.editButton",
      },
    ]
  }
  showDismissButton={true}
  statusBarStyle="default"
  title="Page Details"
>
  <View
    style={
      Object {
        "flex": 1,
        "padding": 16,
      }
    }
  >
    <Heading1
      style={
        Object {
          "paddingBottom": 17,
        }
      }
    />
    <CanvasWebView
      html=""
      navigator={
        Object {
          "dismiss": [Function],
          "dismissAllModals": [Function],
          "isModal": false,
          "pop": [Function],
          "show": [Function],
          "traitCollection": [Function],
        }
      }
      scrollEnabled={true}
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
</Screen>
`;
